--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
 <section id="provas-sociais" class="py-20 bg-slate-50">
     <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-        <h2 class="text-3xl lg:text-4xl font-black color-primary mb-6">O Que Nossos Clientes Dizem Sobre a Montagem?</h2>
+        <h2 class="text-3xl lg:text-4xl font-black color-primary mb-6">O Que Nossos Clientes Dizem?</h2>
         <p class="text-lg text-gray-600 mb-12">Veja o que nossos clientes dizem sobre a pontualidade e qualidade do nosso serviço na cidade Valparaíso de Goiás.</p>
 
         <div x-data="{ 
@@ -310,7 +310,7 @@
 
             <div class="border rounded-lg overflow-hidden mt-4">
                 <button @click="openAccordion = openAccordion === 2 ? null : 2" class="w-full text-left p-4 flex justify-between items-center font-bold transition-colors" :class="{'bg-primary text-white': openAccordion === 2, 'bg-white hover:bg-slate-100 color-primary': openAccordion !== 2}">
-                    💸 Qual é o processo de cobrança? O pagamento é adiantado?
+                    💸 Como é feito o pagamento dos serviços?
                     <span :class="{'rotate-180': openAccordion === 2, 'text-white': openAccordion === 2, 'color-accent': openAccordion !== 2}" class="transform transition-transform duration-300 text-2xl font-light">▾</span>
                 </button>
                 <div x-show="openAccordion === 2" x-collapse class="p-6 text-gray-600 bg-white">
