--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
             <div class="border rounded-lg overflow-hidden mt-4">
                 <button @click="openAccordion = openAccordion === 3 ? null : 3" class="w-full text-left p-4 flex justify-between items-center font-bold transition-colors" :class="{'bg-primary text-white': openAccordion === 3, 'bg-white hover:bg-slate-100 color-primary': openAccordion !== 3}">
-                    🗓️ Como funciona o Orçamento Online?
+                    🗓️ Posso agendar para o dia da minha mudança?
                     <span :class="{'rotate-180': openAccordion === 3, 'text-white': openAccordion === 3, 'color-accent': openAccordion !== 3}" class="transform transition-transform duration-300 text-2xl font-light">▾</span>
                 </button>
                 <div x-show="openAccordion === 3" x-collapse class="p-6 text-gray-600 bg-white">
