--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         </div>
 
         <div x-data="{ openAccordion: null }" x-collapse class="bg-slate-50 p-8 rounded-xl shadow-lg border-t-8 border-secondary">
-            <h3 class="text-2xl font-black mb-4 color-primary">Sua Montagem sem Dúvidas</h3>
+            <h3 class="text-2xl font-black mb-4 color-primary">Tire Suas Dúvidas Sobre Montagem de Móveis</h3>
             
             <div class="border rounded-lg overflow-hidden mt-4">
                 <button @click="openAccordion = openAccordion === 1 ? null : 1" class="w-full text-left p-4 flex justify-between items-center font-bold transition-colors" :class="{'bg-primary text-white': openAccordion === 1, 'bg-white hover:bg-slate-100 color-primary': openAccordion !== 1}">
