--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 
 <section id="contato" class="pb-20">
     <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center bg-gradient-to-br from-[#0e3d71] to-[#045ebf] rounded-2xl p-12"> <h2 class="text-3xl font-black mb-4 text-white">Pronto para Agendar Sua Montagem Profissional?</h2>
-        <p class="text-xl text-white/90 mb-8 max-w-2xl mx-auto"><strong>Agende agora sua montagem profissional e garanta a segurança e durabilidade do seu móvel.</strong></p>
+        <p class="text-xl text-white/90 mb-8 max-w-2xl mx-auto"><strong>Agende sua montagem profissional agora mesmo e garanta a segurança e durabilidade do seu móvel.</strong></p>
         
         <a href="https://wa.me/5561998865417?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20montagem!" target="_blank" class="inline-block bg-accent color-primary font-black text-2xl px-16 py-6 rounded-xl glow-button hover:scale-105">
             FALE AGORA
