--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Montagem de Móveis Profissional e com Garantia Formal em Valparaíso de Goiás, Brasília DF e Cidades do Entorno. Agende Rápido Pelo WhatsApp.">
     <meta name="keywords" content="montador de móveis valparaíso, montagem de móveis df, montador profissional, montador casas bahia, montador madeira madeira, montador perto de mim, montador de guarda roupa, montador de armario de cozinha, montatech brasil">
     <meta name="author" content="MontaTech Brasil">
+
+   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://js.hs-scripts.com https://cdn.tailwindcss.com https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js;">
     
    <!-- FAVICON ADICIONADO AQUI -->
     <link rel="icon" href="img/favicon2.png" type="image/png" sizes="192x192">
