--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
 
       gtag('config', 'G-71WQ023PX4');
     </script>
+<!-- Event snippet for Contato conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17641071678/mMaACPTR2aobEL7I9dtB',
+      'value': 1.0,
+      'currency': 'BRL'
+  });
+</script>
 
     
 <!-- Google tag (gtag.js) -->
