--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Montador de Móveis Valparaíso e Brasília DF | MontaTech</title>
     <meta name="description" content="Encontre um montador de móvesi profissional em Valparaíso de Goiás e Cidades do Entorno. Agende Rápido Pelo WhatsApp.">
-    <meta name="keywords" content="montador de móveis valparaíso, montagem de móveis valparaiso/go, montagem de móveis valparaíso, desmontagem e remontagem, desmontagem e montagem, montador profissional, montador casas bahia, montador madeira madeira, montador perto de mim, montador de guarda roupa, montador de armario de cozinha, empresa de montagem de móveis, montatech brasil, montatec brasil">
+    <meta name="keywords" content="montador próximo a mim, montador de móveis valparaíso, montagem de móveis valparaiso/go, montagem de móveis valparaíso, desmontagem e remontagem, desmontagem e montagem, montador profissional, montador casas bahia, montador madeira madeira, montador perto de mim, montador de guarda roupa, montador de armario de cozinha, empresa de montagem de móveis, montatech brasil, montatec brasil">
     <meta name="author" content="MontaTech Brasil">
     
    <!-- FAVICON ADICIONADO AQUI -->
