--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <p class="max-w-4xl mx-auto text-xl md:text-2xl text-white font-semibold mt-4">
                 ✅ Atendimento Profissional e Eficiente. <strong class="text-inovacao">Agende Agora.</strong>
                 <br>
-                  ✅ Oferecemos Serviços montagem com Qualidade com Garantia.
+                  ✅ Oferecemos Serviços montagem com Qualidade e Garantia.
             </p>
         </div>
         
