--- a/index.html
+++ b/index.html
@@ -331,11 +331,11 @@
 
             <div class="border rounded-lg overflow-hidden mt-4">
                 <button @click="openAccordion = openAccordion === 4 ? null : 4" class="w-full text-left p-4 flex justify-between items-center font-bold transition-colors" :class="{'bg-primary text-white': openAccordion === 4, 'bg-white hover:bg-slate-100 color-primary': openAccordion !== 4}">
-                    📢 Vocês atendem lojistas e empresas?
+                    📢 Vocês vendem móveis novos?
                     <span :class="{'rotate-180': openAccordion === 4, 'text-white': openAccordion === 4, 'color-accent': openAccordion !== 4}" class="transform transition-transform duration-300 text-2xl font-light">▾</span>
                 </button>
                 <div x-show="openAccordion === 4" x-collapse class="p-6 text-gray-600 bg-white">
-                    <p>Sim! Trabalhamos com parcerias comerciais. Nosso Sistema de agendamento e a garantia formal são o diferencial que lojistas e empresas procuram. Entre em contato para mais detalhes sobre tabelas de preço e contrato de prestação de serviços fixo.</p>
+                    <p>Sim! Trabalhamos com parcerias comerciais e fornecedores que nos garantem os melhores produdos de móveis da Magalu, Casas Babia, MadeiraMadeira, Madesa, Ponto frio entre outros. Entre em contato para mais detalhes sobre processo de pagamento, entrega e montagem. Conte com a garantia de fabrica e a nota fiscal de serviços para sua segurança.</p>
                 </div>
             </div>
 
