--- a/new.html
+++ b/new.html
@@ -3,10 +3,38 @@
 <head>
    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Montador de Móveis Valparaíso e Brasília DF | MontaTech</title>
-    <meta name="description" content="Montagem de Móveis Profissional e com Garantia Formal em Valparaíso de Goiás, Brasília DF e Cidades do Entorno. Agende Rápido Pelo WhatsApp.">
-    <meta name="keywords" content="montador de móveis valparaíso, montagem de móveis df, montador profissional, montador casas bahia, montador madeira madeira, montador perto de mim, montador de guarda roupa, montador de armario de cozinha, montatech brasil">
+    <title>Montador de Móveis Valparaíso GO | MontaTech</title>
+    <meta name="description" content="Montador de Móveis Profissional e com Garantia em Valparaíso de Goiás e Cidades do Entorno. Agende Rápido Pelo WhatsApp.">
+    <meta name="keywords" content="montador de móveis valparaíso, montagem de móveis valparaiso go, montador profissional, montador casas bahia, montador madeira madeira, montador perto de mim, montador de guarda roupa, montador de armario de cozinha, montatech brasil">
     <meta name="author" content="MontaTech Brasil">
+
+<!-- FAVICON ADICIONADO AQUI -->
+    <link rel="icon" href="img/favicon2.png" type="image/png" sizes="192x192">
+    <link rel="apple-touch-icon" href="img/favicon2.png">  
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-71WQ023PX4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-71WQ023PX4');
+    </script>
+
+    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17641071678"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17641071678');
+</script>
+
+
+   
     <center><h1>MONTATECHBRASIL</h1></center>
 </body>
 </html>
