--- a/new.html
+++ b/new.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Montador de Móveis Valparaíso GO | MontaTech</title>
+    <title>Montador de Móveis Valparaíso de Goiás | MontaTech</title>
     <meta name="description" content="Montador de Móveis Profissional e com Garantia em Valparaíso de Goiás e Cidades do Entorno. Agende Rápido Pelo WhatsApp.">
     <meta name="keywords" content="montador de móveis valparaíso, montagem de móveis valparaiso go, montador profissional, montador casas bahia, montador madeira madeira, montador perto de mim, montador de guarda roupa, montador de armario de cozinha, montatech brasil">
     <meta name="author" content="MontaTech Brasil">
@@ -35,6 +35,7 @@
 
 
    
-    <center><h1>MONTATECHBRASIL</h1></center>
+    <center><h1>MONTATECHBRASIL</h1>
+    <h2>Montador de Móveis Valparaiso</h2></center>
 </body>
 </html>
