--- a/new.html
+++ b/new.html
@@ -9,6 +9,9 @@
     <meta name="author" content="MontaTech Brasil">
 
 <!-- FAVICON ADICIONADO AQUI -->
+    <!-- FAVICON ADICIONADO AQUI -->
+    <link rel="icon" href="img/favicon2.jpg" type="image/png" sizes="192x192">
+    <link rel="apple-touch-icon" href="img/favicon2.jpg">  
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-71WQ023PX4"></script>
