--- a/new2.html
+++ b/new2.html
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website">
 
     <!-- Favicon Otimizado (use SVG quando tiver) -->
-    <link rel="icon" href="img/favicon.svg-temp" type="image/svg+xml">
+    <link rel="icon" href="img/favicon2.jpg" type="image/svg+xml">
     
     <!-- Chamada para o Arsenal de Estilo -->
     <link rel="stylesheet" href="style.css">
