--- a/new4.html
+++ b/new4.html
@@ -25,7 +25,7 @@
     <header class="main-header">
         <div class="container">
             <a href="#">
-                <img src="img/logo.jpg" alt="MontaTech Brasil - Logo Montador de Móveis em Valparaíso de Goiás" width="220" height="50">
+                <img src="img/logo3.png" alt="MontaTech Brasil - Logo Montador de Móveis em Valparaíso de Goiás" width="220" height="50">
             </a>
         </div>
     </header>
@@ -97,7 +97,7 @@
 
     <footer class="main-footer">
         <div class="container">
-            <img src="img/logo2.jpg" alt="MontaTech Brasil - Montagem de Móveis" class="footer-logo" width="270" height="60">
+            <img src="img/logo2.png" alt="MontaTech Brasil - Montagem de Móveis" class="footer-logo" width="270" height="60">
             <p class="slogan">Gestão Profissional de Montagem de Móveis</p>
             <div class="contatos">
                 <p><strong>Atendemos em:</strong> Valparaíso de Goiás e Região do Entorno</p>
