--- a/new4.html
+++ b/new4.html
@@ -97,7 +97,7 @@
 
     <footer class="main-footer">
         <div class="container">
-            <img src="img/logoX.png" alt="MontaTech Brasil - Montagem de Móveis" class="footer-logo" width="270" height="60">
+            <img src="img/logo3.png" alt="MontaTech Brasil - Montagem de Móveis" class="footer-logo" width="270" height="60">
             <p class="slogan">Gestão Profissional de Montagem de Móveis</p>
             <div class="contatos">
                 <p><strong>Atendemos em:</strong> Valparaíso de Goiás e Região do Entorno</p>
