--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <footer class="main-footer">
         <div class="container">
             <img src="img/logo3.png" alt="MontaTech Brasil - Montagem de Móveis" class="footer-logo" width="270" height="60">
-            <p class="slogan">Gestão Profissional de Montagem de Móveis</p>
+            <p class="slogan">SEU MÓVEL NOSSO COMPROMISSO</p>
             <div class="contatos">
                 <p><strong>Atendemos em:</strong> Valparaíso de Goiás e Região do Entorno</p>
                 <p><strong>Contato/WhatsApp:</strong> <a href="https://wa.me/5561998865417">(61) 9 9886-5417</a></p>
