--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Montador de Móveis Valparaíso de Goiás | MontaTech Brasil</title>
+    <title>Montador de Móveis Valparaíso de Goiás | 61 9 9886-5417</title>
     <meta name="description" content="Serviço de Montagem de Móveis em Valparaíso de Goiás e Região do Entorno. Qualidade e Garantia. Orçamento Rápido Pelo WhatsApp para montagem de guarda-roupa, cozinha, painel de TV e mais.">
     
     <!-- SATURAÇÃO DE PALAVRAS-CHAVE NA META KEYWORDS -->
@@ -49,7 +49,7 @@
                 <div class="services-grid">
                     <div>
                         <h3>Montagem de Móveis Convencionais</h3>
-                        <p>Realizamos a montagem de todos os tipos de móveis residenciais e de escritório, garantindo um serviço rápido e perfeito.</p>
+                    <p>Realizamos a montagem de todos os tipos de móveis, chame no WhatsApp 61 9 9886 5417 e garanta um serviço profissional.</p>
                         <ul>
                             <li>• Montador de guarda-roupa</li>
                             <li>• Montagem de cozinhas compactas</li>
